<resources>
    <string name="app_name">Your age in minutes</string>
    <string name="calculate_your">Calculate your</string>
    <string name="age">AGE</string>
    <string name="select_date">Select DAte</string>
    <string name="selected_date">Selected date</string>
    <string name="in_minutes_till_date">In minutes till date</string>
    <string name="in_days_till_date">In days till date</string>
    <string name="in_minutes_and_days">in minutes and days</string>
</resources>